--- a/styles.css
+++ b/styles.css
@@ -682,7 +682,7 @@ footer img {
         align-items: flex-start;
         list-style: none;
         position: fixed;
-        background-color: #000000;
+        background-color: rgb(6, 6, 109);
         height: 100vh;
         width: 100%;
         top: 0;
