--- a/styles.css
+++ b/styles.css
@@ -270,13 +270,13 @@ nav ul {
     background-color: #FFFFFF;
 }
 
-.accordion-button::after {
+/* .accordion-button::after {
     background-image: url('assets/plus.png');
 }
 
 .accordion-button:not(.collapsed)::after {
     background-image: url('assets/minus.png');
-}
+} */
 
 .accordion-body {
     padding: 25px 0 0 0;
@@ -683,7 +683,7 @@ footer img {
         list-style: none;
         position: fixed;
         background-color: rgb(6, 6, 109);
-        height: 100vh;
+        height: 90vh;
         width: 100%;
         top: 0;
         left: 0;
@@ -698,7 +698,7 @@ footer img {
 
     .nav-links-mobile.open {
         clip-path: circle(950px at 90% -10%);
-        -webkit-clip-path: circle(950px at 90% -10%);
+        -webkit-clip-path: circle(1000px at 90% -10%);
         pointer-events: all;
     }
 
@@ -846,7 +846,7 @@ footer img {
     }
 
     .brand-mobile {
-        margin-top: -200px;
+        margin-top: -100px;
         z-index: 2;
     }
 
@@ -866,7 +866,7 @@ footer img {
     }
 
     .expression-mobile {
-        margin-top: -200px;
+        margin-top: -100px;
         z-index: 3;
     }
 
@@ -886,7 +886,7 @@ footer img {
     }
 
     .dialogue-mobile {
-        margin-top: -200px;
+        margin-top: -100px;
         z-index: 3;
     }
 
